format ros package

--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,12 @@
 <package>
-  <name>phasespace</name>
+  <name>phasespace_ros</name>
 
   <version>0.0.1</version>
 
   <description>PhaseSpace Motion Capture System</description>
 
   <maintainer email="gregd@phasespace.com">Gregory D'Andrea</maintainer>
+  <maintainer email="davidgogh96@gmail.com.com">Yuxiang Gao</maintainer>
 
   <license>BSD</license>
 
@@ -17,11 +18,15 @@
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>tf</build_depend>
   
   <run_depend>pkg-config</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>tf</run_depend>
 
   <export></export>
 </package>
