--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>phasespace_ros</name>
 
   <version>0.0.1</version>
@@ -13,7 +14,7 @@
   <author>Gregory D'Andrea</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-
+  <buildtool_depend>catkin_simple</buildtool_depend>
   <build_depend>pkg-config</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
@@ -21,12 +22,12 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
   
-  <run_depend>pkg-config</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>tf</run_depend>
+  <exec_depend>pkg-config</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
 
   <export></export>
 </package>
